# AoC2021

./: CMakeLists.txt  Makefile  README.md  make_notes.md
.github/workflows/: check_build.yml
apps/: CMakeLists.txt  main.cpp
include/aoc/: day02.h  day02_lib.h  day03.h  day03_lib.h  day04.h  day04_lib.h  day05.h  day05_lib.h  day06.h  day06_lib.h  day07.h  day07_lib.h  day08.h  day08_lib.h  day09.h  day09_lib.h  day10.h  day10_lib.h  day2.h  day2_lib.h
scripts/: make_module.sh  run_all_days.sh
src/: CMakeLists.txt  day01.cpp  day01.h  main.cpp
src/aoc/: day01.cpp  day01_lib.cpp  day02.cpp  day02_lib.cpp  day03.cpp  day03_lib.cpp  day04.cpp  day04_lib.cpp  day05.cpp  day05_lib.cpp  day06.cpp  day06_lib.cpp  day07.cpp  day07_lib.cpp  day08.cpp  day08_lib.cpp  day09.cpp  day09_lib.cpp  day10.cpp  day10_lib.cpp  day2.cpp  day2_lib.cpp
src_test/: day01_test.cpp  test_main.cpp  test_runner.cpp
tests/: CMakeLists.txt  day01_test.cpp  day01_test.h  day02_test.cpp  day02_test.h  day03_test.cpp  day03_test.h  day04_test.cpp  day04_test.h  day05_test.cpp  day05_test.h  day06_test.cpp  day06_test.h  day07_test.cpp  day07_test.h  day08_test.cpp  day08_test.h  day09_test.cpp  day09_test.h  day10_test.cpp  day10_test.h  day2_test.cpp  day2_test.h  test_runner.cpp  test_runner.h
